--- a/ThesisProject2/app/templates/app/custom/viewEmployees.html
+++ b/ThesisProject2/app/templates/app/custom/viewEmployees.html
@@ -13,7 +13,7 @@
     </tr>
     {% for item in table_data %}
     <tr>
-        <td>{{ item.employee_number }}</td>
+        <td>{{ item.employee_id_num }}</td>
         <td>{{ item.first_name }}</td>
         <td>{{ item.middle_name }}</td>
         <td>{{ item.last_name }}</td>
