--- a/ThesisProject2/app/templates/app/custom/registrationForm.html
+++ b/ThesisProject2/app/templates/app/custom/registrationForm.html
@@ -5,7 +5,7 @@
 <form id="registration_form" action="" method="POST" onsubmit="this.submit(); this.reset(); return false;">
     <div id="infoDiv">
         {% csrf_token %}
-        {{ form.employee_number }}
+        {{ form.employee_id_num }}
         {{ form.first_name }}
         {{ form.middle_name }}
         {{ form.last_name }}
