--- a/ThesisProject2/app/static/app/content/custStyles.css
+++ b/ThesisProject2/app/static/app/content/custStyles.css
@@ -10,6 +10,9 @@ body {
     text-align:center;
     display:grid;
 }
+.dashboardWindow p{
+    font-size:24px;
+}
 .navbar{
     background-color:rgb(2, 52, 107);
 }
