--- a/ThesisProject2/app/templates/app/custom/startPage.html
+++ b/ThesisProject2/app/templates/app/custom/startPage.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id='lastPplDetected' class="dashboardWindow">
-            <h3>Last People Detected</h3>
+            <h3>Last Person Detected</h3>
             <br />
             <p>{{ last_detect_type }}</p>
             <p>{{ last_detect_time }}</p>
