--- a/ThesisProject2/app/templates/app/custom/employeeData.html
+++ b/ThesisProject2/app/templates/app/custom/employeeData.html
@@ -5,5 +5,6 @@
 <h2><a href="{% url 'registerEmployee' %}">Register Employee</a></h2>
 <h2><a href="{% url 'viewEmployees' %}">View Employees </a></h2>
 <h2><a href="{% url 'updateEmployees' %}">Update Employee Data </a></h2>
+<h2><a href="{% url 'uploadImages' %}">Register Employee Face</a></h2>
 
 {% endblock %}
