Added the function to remove employees in the database

--- a/ThesisProject2/app/templates/app/custom/viewEmployees.html
+++ b/ThesisProject2/app/templates/app/custom/viewEmployees.html
@@ -27,4 +27,5 @@
 <h4><a href="{% url 'uploadImages' %}">Register Employee Face</a></h4>
 <h4><a href="{% url 'removeEmployee' %}">Remove Employee</a></h4>
 <h4><a href="{% url 'removedEmployees' %}">View Removed Employees</a></h4>
+<h4><a href="{% url 'restoreRemovedEmployee' %}">Restore Removed Employee</a></h4>
 {% endblock %}
