--- a/ThesisProject2/app/templates/app/custom/startPage.html
+++ b/ThesisProject2/app/templates/app/custom/startPage.html
@@ -18,7 +18,7 @@
             <p> {{ num_of_employees }}</p>
         </div>
 
-        <div id='attGraph' class="dashboardWindow">
+        <div id='attGraph' class="dashboardWindow" hidden="hidden" style="display:none;">
             <h3>Attendance Graph</h3>
         </div>
 
