--- a/ThesisProject2/app/templates/app/custom/updateForm.html
+++ b/ThesisProject2/app/templates/app/custom/updateForm.html
@@ -20,7 +20,7 @@
     </div>
 
 
-    <input id="regFormSubmitBtn" type="submit" value="Submit">
+    <input id="regFormSubmitBtn" type="submit" value="Update">
 </form>
 <script>
     function dataUpdater() {
