ARemoved the permissions column in the Users Page

--- a/ThesisProject2/app/templates/app/layout.html
+++ b/ThesisProject2/app/templates/app/layout.html
@@ -44,8 +44,11 @@
 
                     {% endif %}
 
+                    {% if request.user.is_anonymous == True %}
                     <li><a href="{% url 'about' %}">About</a></li>
+                    {% endif %}
                     <li><a href="{% url 'contact' %}">Contact</a></li>
+
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
