--- a/ThesisProject2/app/templates/app/custom/startPage.html
+++ b/ThesisProject2/app/templates/app/custom/startPage.html
@@ -12,7 +12,7 @@
 
     {% if perms.app.check_attendance_records == True %}
 
-        <div id='attToday' class="dashboardWindow">
+        <div id='attToday' class="dashboardWindow" hidden="hidden" style="display:none;">
             <h3>Expected Attendance Today</h3>
             <br />
             <p> {{ num_of_employees }}</p>
